--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Turma 30 Unifor
+description: O site ainda não oficial da T30 de Medicina da Unifor.
 github_username: t30unifor
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "t30"
@@ -39,8 +39,8 @@ baseurl: "/t30" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: #fastdotai
+    github: #fastai
 
 # Set this to true to get LaTeX math equation support
 use_math: 
