--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ show_description: true
 show_image: false
 
 # Set this to true to turn on annotations with hypothes.is (https://web.hypothes.is/)
-annotations: true
+annotations: false
 
 # Set this to true to display tags on each post
 show_tags: true
